# CodecPilot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
codecpilot/: analyzer.py  cli.py  llm.py  models.py  profiles.py  runner.py
