[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codecpilot"
version = "0.1.0"
description = "A smart CLI wrapper and encoding analysis tool for FFmpeg"
readme = "README.md"
authors = [
    { name = "CodecPilot Team" }
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "google-genai",
]

[project.scripts]
codecpilot = "codecpilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["codecpilot"]
